@@ -4,7 +4,8 @@ Changes
 0.5 (unreleased)
 ----------------
 
-- ...
+- More debug logging shows now the currently processed OID
+  (that is helpful to determine which object misses the factory)
 
 0.4 (2010-07-14)
 ----------------
